# fstat

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DEVLOG.md
src/: CMakeLists.txt  main.cpp
src/core/: node.cpp  node.hpp  scanner.cpp  scanner.hpp
src/ui/: app.cpp  app.hpp
src/util/: format.cpp  format.hpp
